--- a/Ilevus/Views/Shared/_Layout.cshtml
+++ b/Ilevus/Views/Shared/_Layout.cshtml
@@ -1,36 +1,40 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>ilevus</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+    <div id="main-global-popover" class="ilevus-popover"></div>
+    <div id="main-global-modal" class="modal fade" tabindex="-1" role="dialog"></div>
+    <div id="main-body"></div>
+    @RenderBody()
 
+    <script type="text/javascript">
+    	var apiPath = "api/";
+        var urlBase = location.origin+location.pathname;
+        var BACKEND_URL = urlBase+apiPath;
+    </script>
+    <script type="text/javascript" src='@Url.Content("app.js")' charset="utf-8"></script>
+    <script type="text/javascript">
+	  WebFontConfig = {
+	    google: { families: [
+	    	'Open+Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic:latin'
+    	] }
+	  };
+	  (function() {
+	    var wf = document.createElement('script');
+	    wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+	      '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+	    wf.type = 'text/javascript';
+	    wf.async = 'true';
+	    var s = document.getElementsByTagName('script')[0];
+	    s.parentNode.insertBefore(wf, s);
+	  })();
+    </script>
 </body>
 </html>
