Correcoes no projeto do SASS, refactor na home e topbar

--- a/Ilevus/sass/components/_avatar.scss
+++ b/Ilevus/sass/components/_avatar.scss
@@ -25,6 +25,10 @@
     @include size($avatar-img-xl);
   }
 
+  &-navbar {
+    @include size($avatar-img-navbar);
+  }
+
   &-circle {
     border-radius: 50%;
   }
