--- a/Ilevus/sass/dependencies/_variables.scss
+++ b/Ilevus/sass/dependencies/_variables.scss
@@ -652,6 +652,7 @@ $avatar-img-sm:               2.25rem !default;
 $avatar-img-md:               3rem !default;
 $avatar-img-lg:               5rem !default;
 $avatar-img-xl:               7.5rem !default;
+$avatar-img-navbar:           2rem !default;
 
 
 // Breadcrumbs
