Ajustes e tela de registro pronta.

--- a/Ilevus/sass/anvil.scss
+++ b/Ilevus/sass/anvil.scss
@@ -36,6 +36,7 @@
 // Components w/ JavaScript
 @import "components/alert";
 @import "components/dropdown";
+@import "components/modal";
 @import "components/tooltip";
 
 
