--- a/Ilevus/sass/dependencies/utilities/_background.scss
+++ b/Ilevus/sass/dependencies/utilities/_background.scss
@@ -5,7 +5,7 @@
 // Inverse
 // TODO: redo this as a proper class
 .bg-inverse {
-  color: $gray-lighter;
+  color: $gray-lightest;
   background-color: $gray-dark;
 }
 
