--- a/Ilevus/sass/anvil.scss
+++ b/Ilevus/sass/anvil.scss
@@ -23,6 +23,7 @@
 @import "components/button-group";
 @import "components/nav";
 @import "components/navbar";
+@import "components/card";
 @import "components/labels";
 @import "components/media";
 @import "components/avatar";
