--- a/Ilevus/sass/components/_navbar.scss
+++ b/Ilevus/sass/components/_navbar.scss
@@ -148,16 +148,16 @@
 
   .nav-link {
     display: block;
-    padding-top:    .425rem;
-    padding-bottom: .425rem;
+    padding-top:    .375rem; //.425rem;
+    padding-bottom: .375rem; //.425rem;
 
     + .nav-link {
-      margin-left: 1rem;
+      margin-left: 1.5rem;
     }
   }
 
   .nav-item + .nav-item {
-    margin-left: 1rem;
+    margin-left: 1.5rem;
   }
 }
 
