--- a/Ilevus/sass/dependencies/_variables.scss
+++ b/Ilevus/sass/dependencies/_variables.scss
@@ -492,7 +492,7 @@ $card-border-width:        1px !default;
 $card-border-radius:       $border-radius !default;
 $card-border-color:        #e5e5e5 !default;
 $card-border-radius-inner: $card-border-radius !default;
-$card-cap-bg:              $gray-lightest !default;
+$card-cap-bg:              darken($gray-lightest, 3%) !default;
 $card-bg:                  #fff !default;
 
 $card-link-hover-color:    #fff !default;
