--- a/Ilevus/sass/layouts/_page-banner.scss
+++ b/Ilevus/sass/layouts/_page-banner.scss
@@ -1,19 +1,30 @@
 .page-banner {
-  padding: $page-banner-padding 0;
   text-align: center;
   background-color: $brand-light;
+}
 
-  @include media-breakpoint-up(sm) {
-    padding: ($page-banner-padding * 2) 0;
+@if $enable-flex {
+  .page-banner {
+    display: flex;
+    align-items: center;
+    min-height: 100vh;
   }
-  @include media-breakpoint-up(md) {
-    padding: ($page-banner-padding * 4) 0;
-  }
-  @include media-breakpoint-up(lg) {
-    padding: ($page-banner-padding * 6) 0;
-  }
-  @include media-breakpoint-up(xl) {
-    padding: ($page-banner-padding * 10) 0;
+} @else {
+  .page-banner {
+    padding: $page-banner-padding 0;
+  
+    @include media-breakpoint-up(sm) {
+      padding: ($page-banner-padding * 2) 0;
+    }
+    @include media-breakpoint-up(md) {
+      padding: ($page-banner-padding * 4) 0;
+    }
+    @include media-breakpoint-up(lg) {
+      padding: ($page-banner-padding * 6) 0;
+    }
+    @include media-breakpoint-up(xl) {
+      padding: ($page-banner-padding * 10) 0;
+    }
   }
 }
 
