Toast para mesnagens.

--- a/Ilevus/sass/anvil.scss
+++ b/Ilevus/sass/anvil.scss
@@ -38,6 +38,7 @@
 @import "components/alert";
 @import "components/dropdown";
 @import "components/modal";
+@import "components/toast";
 @import "components/tooltip";
 
 
