--- a/Ilevus/sass/dependencies/mixins/_buttons.scss
+++ b/Ilevus/sass/dependencies/mixins/_buttons.scss
@@ -95,6 +95,6 @@
 @mixin button-size($padding-y, $padding-x, $font-size, $line-height, $border-radius) {
   padding: $padding-y $padding-x;
   font-size: $font-size;
-  line-height: $line-height;
+  line-height: $btn-line-height;
   @include border-radius($border-radius);
 }
