--- a/Ilevus/sass/dependencies/mixins/_forms.scss
+++ b/Ilevus/sass/dependencies/mixins/_forms.scss
@@ -3,10 +3,10 @@
 // Used in _forms.scss to generate the form validation CSS for warnings, errors,
 // and successes.
 
-@mixin form-control-validation($color) {
+@mixin form-element-validation($color) {
   // Color the label and help text
   .text-help,
-  .form-control-label,
+  .form-element-label,
   .radio,
   .checkbox,
   .radio-inline,
@@ -18,7 +18,7 @@
     color: $color;
   }
   // Set the border and box shadow on specific inputs to match
-  .form-control {
+  .form-element {
     border-color: $color;
     // @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075)); // Redeclare so transitions work
 
@@ -36,7 +36,7 @@
     background-color: lighten($color, 40%);
   }
   // Optional feedback icon
-  .form-control-feedback {
+  .form-element-feedback {
     color: $color;
   }
 }
@@ -53,7 +53,7 @@
 //
 // Example usage: change the default blue border and shadow to white for better
 // contrast against a dark gray background.
-@mixin form-control-focus() {
+@mixin form-element-focus() {
   &:focus {
     border-color: $input-border-focus;
     outline: none;
