Correcoes na navbar, forms e buttons

--- a/Ilevus/sass/components/_dropdown.scss
+++ b/Ilevus/sass/components/_dropdown.scss
@@ -45,8 +45,8 @@
   min-width: 160px;
   padding: 5px 0;
   margin: 2px 0 0; // override default ul
-  font-size: $font-size-base;
-  color: $body-color;
+  font-size: $font-size-sm;
+  color: #fff;
   text-align: left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
   list-style: none;
   background-color: $dropdown-bg;
@@ -67,7 +67,7 @@
 .dropdown-item {
   display: block;
   width: 100%; // For `<button>`s
-  padding: 3px 20px;
+  padding: .5rem 1rem;
   clear: both;
   font-weight: normal;
   line-height: $line-height;
