--- a/Ilevus/sass/components/_navbar.scss
+++ b/Ilevus/sass/components/_navbar.scss
@@ -147,6 +147,7 @@
   }
 
   .nav-link {
+    font-weight: 600;
     display: block;
     padding-top:    .375rem; //.425rem;
     padding-bottom: .375rem; //.425rem;
