--- a/Ilevus/sass/components/_buttons.scss
+++ b/Ilevus/sass/components/_buttons.scss
@@ -17,7 +17,7 @@
   cursor: pointer;
   user-select: none;
   border: $input-btn-border-width solid transparent;
-  @include button-size($btn-padding-y, $btn-padding-x, $font-size-base, $line-height, $btn-border-radius);
+  @include button-size($btn-padding-y, $btn-padding-x, $font-size-sm, $line-height, $btn-border-radius);
   @include transition(all .2s ease-in-out);
 
   &,
@@ -80,7 +80,6 @@ fieldset[disabled] a.btn {
 
 .btn-brand {
   @include button-variant($btn-brand-color, $btn-brand-bg, $btn-brand-border);
-  font-weight: 600;
 }
 .btn-neutral {
   @include button-variant($btn-neutral-color, $btn-neutral-bg, $btn-neutral-border);
@@ -168,7 +167,7 @@ fieldset[disabled] a.btn {
 
 .btn-lg {
   // line-height: ensure even-numbered height of button next to large input
-  @include button-size($btn-padding-y-lg, $btn-padding-x-lg, $font-size-lg, $line-height-lg, $btn-border-radius-lg);
+  @include button-size($btn-padding-y-lg, $btn-padding-x-lg, $font-size-sm, $line-height-lg, $btn-border-radius-lg);
 }
 .btn-sm {
   // line-height: ensure proper height of button next to small input
