--- a/Ilevus/sass/components/_forms.scss
+++ b/Ilevus/sass/components/_forms.scss
@@ -8,7 +8,7 @@
   // // Make inputs at least the height of their button counterpart (base line-height + padding + border)
   // height: $input-height;
   padding: $input-padding-y $input-padding-x;
-  font-size: $font-size-base;
+  font-size: $font-size-sm;
   line-height: $input-line-height;
   color: $input-color;
   background-color: $input-bg;
@@ -159,7 +159,7 @@ select.form-element-sm {
 
 .form-element-lg {
   padding: $input-padding-y-lg $input-padding-x-lg;
-  font-size: $font-size-lg;
+  font-size: $font-size-sm;
   @include border-radius($input-border-radius-lg);
 }
 
