--- a/Ilevus/sass/dependencies/_variables.scss
+++ b/Ilevus/sass/dependencies/_variables.scss
@@ -247,7 +247,7 @@ $table-border-color:            $gray-lighter !default;
 $btn-padding-x:                  1rem !default;
 $btn-padding-y:                  .375rem !default;
 $btn-line-height:                1.25 !default;
-$btn-font-weight:                normal !default;
+$btn-font-weight:                600 !default;
 
 $btn-brand-color:                #fff !default;
 $btn-brand-bg:                   $brand-primary !default;
@@ -293,7 +293,7 @@ $btn-border-radius-sm:           $border-radius-sm !default;
 
 // Forms
 
-$input-padding-x:                .75rem !default;
+$input-padding-x:                .5rem !default;
 $input-padding-y:                .375rem !default;
 $input-line-height:              1.25 !default;
 
@@ -314,10 +314,10 @@ $input-box-shadow-focus:         rgba(102,175,233,.6) !default;
 
 $input-color-placeholder:        $gray-light !default;
 
-$input-padding-x-sm:             .75rem !default;
+$input-padding-x-sm:             .5rem !default;
 $input-padding-y-sm:             .275rem !default;
 
-$input-padding-x-lg:             1.25rem !default;
+$input-padding-x-lg:             1rem !default;
 $input-padding-y-lg:             .75rem !default;
 
 $input-height:                   (($font-size-base * $line-height) + ($input-padding-y * 2)) !default;
@@ -381,10 +381,10 @@ $navbar-border-radius:              $border-radius !default;
 $navbar-padding-horizontal:         $spacer !default;
 $navbar-padding-vertical:           ($spacer / 2) !default;
 
-$navbar-dark-color:                 rgba(255,255,255,.5) !default;
-$navbar-dark-hover-color:           rgba(255,255,255,.75) !default;
+$navbar-dark-color:                 rgba(255,255,255,.75) !default;
+$navbar-dark-hover-color:           rgba(255,255,255,1) !default;
 $navbar-dark-active-color:          rgba(255,255,255,1) !default;
-$navbar-dark-disabled-color:        rgba(255,255,255,.25) !default;
+$navbar-dark-disabled-color:        rgba(255,255,255,.4) !default;
 
 $navbar-light-color:                rgba(0,0,0,.3) !default;
 $navbar-light-hover-color:          rgba(0,0,0,.6) !default;
