--- a/Ilevus/sass/dependencies/_variables.scss
+++ b/Ilevus/sass/dependencies/_variables.scss
@@ -379,7 +379,7 @@ $zindex-modal:             1050 !default;
 
 $navbar-border-radius:              $border-radius !default;
 $navbar-padding-horizontal:         $spacer !default;
-$navbar-padding-vertical:           ($spacer / 2) !default;
+$navbar-padding-vertical:           $spacer !default; //($spacer / 2) !default;
 
 $navbar-dark-color:                 rgba(255,255,255,.75) !default;
 $navbar-dark-hover-color:           rgba(255,255,255,1) !default;
