Incremento geral no design

--- a/Ilevus/sass/dependencies/_variables.scss
+++ b/Ilevus/sass/dependencies/_variables.scss
@@ -90,7 +90,7 @@ $border-width:               1px !default;
 //
 // Settings for the `<body>` element.
 
-$body-bg:                    #fff !default;
+$body-bg:                    #f2f2f2 !default;
 $body-color:                 $gray-dark !default;
 
 
