--- a/Ilevus/sass/custom/_variables.scss
+++ b/Ilevus/sass/custom/_variables.scss
@@ -3,3 +3,19 @@
 //
 $prefix: 'ilv-';
 
+
+//
+// Colors
+//
+$color-brand-dark:             #393972;
+$color-brand-base:             #4C4C98;
+$color-brand-light:            #5959B2;
+$color-brand-lighter:          #7F7FFE;
+$color-brand-lightest:         #f5f7f9;
+$color-brand-inverse:          #ffffff;
+
+
+//
+// Navbar
+//
+$navbar-padding-y:             1.5rem;
