Adicionada informaÃcoes do perfil profissional

--- a/Ilevus/sass/custom/_variables.scss
+++ b/Ilevus/sass/custom/_variables.scss
@@ -22,9 +22,9 @@ $color-brand-inverse:          #FFFFFF;
 
 $color-primary-brand:          $color-brand-base !default;
 $color-primary-success:        #4bca81 !default;
-$color-primary-info:           #654982 !default;
+$color-primary-info:           #22C8EB;
 $color-primary-warning:        #f6c342 !default;
-$color-primary-danger:         #c23934 !default;
+$color-primary-danger:         #eb4d5c;
 
 $color-secondary-lightgreen:   #d4ece6 !default;
 $color-secondary-lightblue:    #22C8EB;
@@ -56,7 +56,7 @@ $form-control-border-focus:    $color-secondary-lightblue;
 //
 // Navbar
 //
-$navbar-padding-y:             1.5rem;
+$navbar-padding-y:             1.25rem;
 
 
 //
