--- a/Ilevus/sass/dependencies/_variables.scss
+++ b/Ilevus/sass/dependencies/_variables.scss
@@ -35,4 +35,5 @@ $prefix: 'anv-' !default;
 @import "variables/card";
 @import "variables/tag";
 @import "variables/blankslate";
+@import "variables/progress";
 @import "variables/alert";
