--- a/Ilevus/sass/components/_buttons.scss
+++ b/Ilevus/sass/components/_buttons.scss
@@ -8,7 +8,7 @@
   //background: 0 0;
   text-align: center;
   vertical-align: middle;
-  text-transform: capitalize;
+  //text-transform: capitalize;
   white-space: nowrap;
   overflow: hidden;
   cursor: pointer;
