Adicionado estilo para icones e algumas tags do translate

--- a/Ilevus/sass/anvil.scss
+++ b/Ilevus/sass/anvil.scss
@@ -18,6 +18,7 @@
 @import "dependencies/core/type";
 @import "dependencies/core/images";
 @import "dependencies/core/code";
+@import "dependencies/core/icons";
 
 
 // Core components
