--- a/Ilevus/sass/anvil.scss
+++ b/Ilevus/sass/anvil.scss
@@ -55,6 +55,7 @@
 
 
 // Custom layout
+@import "custom/general";
 @import "custom/page-banner";
 @import "custom/card";
 @import "custom/markdown";
