--- a/Ilevus/sass/custom/_variables.scss
+++ b/Ilevus/sass/custom/_variables.scss
@@ -70,3 +70,6 @@ $card-border-color:            $card-bg;
 
 $card-padding-x:               1rem !default;
 $card-padding-y:               1rem !default;
+
+$progress-bg: $color-neutral-lighter;
+$progress-bar-bg: $color-neutral-base;
