--- a/Ilevus/sass/custom/_landing-page.scss
+++ b/Ilevus/sass/custom/_landing-page.scss
@@ -1,11 +1,8 @@
 ﻿.#{$prefix}lp-banner {
-  background:
-    linear-gradient(rgba($color-brand-base, .55), rgba($color-brand-base, .75) ),
-    url("https://austinphotographer.files.wordpress.com/2012/11/dub-9804.jpg"),
-    linear-gradient($color-brand-base, $color-brand-base);
   background-size: cover;
   background-position: top center;
   background-repeat: no-repeat;
+  background-color: $color-neutral-dark;
 
   .#{$prefix}lp-banner-content {
     display: flex;
@@ -62,7 +59,7 @@
 }
 
 .#{$prefix}lp-section {
-  padding: 8rem 0;
+  padding: 4rem 0;
 
   &.#{$prefix}lp-section-inverse {
     background-color: $color-brand-base;
@@ -78,4 +75,34 @@
   padding: 2.5rem 0;
   background-color: $color-neutral-dark;
   color: #fff;
+}
+
+.#{$prefix}lp-icon-md {
+  height: 3rem;
+}
+
+.#{$prefix}lp-icon-lg {
+  height: 4rem;
+}
+
+.#{$prefix}lp-testimonial {
+  background:
+    linear-gradient(rgba($color-neutral-dark, .55), rgba($color-neutral-dark, .75) ),
+    url("http://cdn.c.photoshelter.com/img-get2/I0000g3IU_90eThI/fit=1000x750/Business-Profile-Photograph.jpg");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-color: $color-neutral-dark;
+  color: #fff;
+  padding: 8rem 0;
+}
+
+@include media-breakpoint-up(md) {
+  .#{$prefix}lp-section {
+    padding: 6rem 0;
+  }
+
+  .#{$prefix}lp-testimonial {
+    padding: 12rem 0;
+  }
 }
