Alteração na Landing Page, imagem estava puxando link externo não HTTPS.

--- a/Ilevus/sass/custom/_landing-page.scss
+++ b/Ilevus/sass/custom/_landing-page.scss
@@ -88,7 +88,7 @@
 .#{$prefix}lp-testimonial {
   background:
     linear-gradient(rgba($color-neutral-dark, .55), rgba($color-neutral-dark, .75) ),
-    url("http://cdn.c.photoshelter.com/img-get2/I0000g3IU_90eThI/fit=1000x750/Business-Profile-Photograph.jpg");
+    url("/Business-Profile-Photograph.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
