--- a/Ilevus/sass/dependencies/variables/_buttons.scss
+++ b/Ilevus/sass/dependencies/variables/_buttons.scss
@@ -11,7 +11,7 @@ $btn-border-radius:            $border-radius !default;
 
 $btn-line-height:              $btn-height - ($btn-border-width * 2)  !default;
 
-$btn-padding-x:                1rem !default;
+$btn-padding-x:                .5rem !default;
 $btn-padding-y:                0 !default;
 
 
