--- a/Ilevus/sass/dependencies/mixins/_tab-focus.scss
+++ b/Ilevus/sass/dependencies/mixins/_tab-focus.scss
@@ -6,6 +6,7 @@
   // WebKit
   // outline: 5px auto -webkit-focus-ring-color;
   // outline-offset: -2px;
-  outline: 1px dotted #959595;
-  outline-offset: -4px;
+  //outline: 1px dotted #959595;
+  //outline-offset: -4px;
+  outline: none;
 }
