--- a/Ilevus/sass/dependencies/variables/_forms.scss
+++ b/Ilevus/sass/dependencies/variables/_forms.scss
@@ -25,3 +25,8 @@ $form-control-placeholder:     $color-neutral-light !default;
 $form-group-margin-bottom:     1rem !default;
 
 $form-check-radio-size:        1.25rem !default;
+
+$form-control-width-full:      100% !default;
+$form-control-width-short:     5rem !default;
+$form-control-width-medium:    15rem !default;
+$form-control-width-long:      30rem !default;
