--- a/Ilevus/sass/dependencies/mixins/_tag.scss
+++ b/Ilevus/sass/dependencies/mixins/_tag.scss
@@ -2,10 +2,12 @@
 
 @mixin tag-variant($color) {
   background-color: $color;
+  border: 1px solid darken($color, 20%);
 
   &[href] {
     @include hover-focus {
       background-color: darken($color, 8%);
+      border-color: darken($color, 25%);
     }
   }
 }
