Adicionadas rotas para as paginas do painel de administrador e corrigido css das tabelas

--- a/Ilevus/sass/components/_tables.scss
+++ b/Ilevus/sass/components/_tables.scss
@@ -91,3 +91,10 @@
 .#{$prefix}table-fixed {
   table-layout: fixed;
 }
+
+.#{$prefix}table-middle {
+
+  th, td {
+    vertical-align: middle;
+  }
+}
