--- a/Ilevus/sass/dependencies/variables/_tables.scss
+++ b/Ilevus/sass/dependencies/variables/_tables.scss
@@ -7,7 +7,7 @@ $table-sm-cell-padding:        .25rem .5rem !default;
 
 $table-spacer:                 $spacer !default;
 
-$table-bg:                     $body-bg !default;
+$table-bg:                     #FFFFFF !default;
 $table-bg-accent:              $color-neutral-lightest !default;
 $table-bg-hover:               $color-brand-lightest !default;
 $table-bg-active:              $table-bg-hover !default;
