--- a/Ilevus/sass/layouts/_chat.scss
+++ b/Ilevus/sass/layouts/_chat.scss
@@ -1,6 +1,7 @@
 ﻿.#{$prefix}chat {
   display: flex;
   width: 100%;
+  height: 650px;
 
   .#{$prefix}chat-list,
   .#{$prefix}chat-messages {
@@ -94,6 +95,7 @@
 
 .#{$prefix}chat-messages-body {
   flex: 1 1 auto;
+  overflow-y: auto;
 }
 
 .#{$prefix}chat-messages-header {
