--- a/Ilevus/sass/dependencies/variables/_forms.scss
+++ b/Ilevus/sass/dependencies/variables/_forms.scss
@@ -10,8 +10,8 @@ $form-control-height:          2rem !default;
 $form-control-height-sm:       1.75rem !default;
 $form-control-height-lg:       2.5rem !default;
 
-$form-control-border-width:    $border-width * 2 !default;
-$form-control-border-color:    $color-neutral-lighter !default;
+$form-control-border-width:    $border-width !default;
+$form-control-border-color:    $color-neutral-light !default;
 $form-control-border-radius:   $border-radius !default;
 
 $form-control-border-hover:    $color-neutral-light !default;
