--- a/Ilevus/sass/components/_avatar.scss
+++ b/Ilevus/sass/components/_avatar.scss
@@ -85,6 +85,7 @@
     display: inline-block;
     vertical-align: middle;
     line-height: 1;
+    border-radius: 3px;
 
     &-xs {
         @include size($avatar-img-xs);
@@ -104,6 +105,10 @@
 
     &-xl {
         @include size($avatar-img-xl);
+    }
+
+    &-public {
+        @include size($avatar-img-xl * 2);
     }
 
     &-circle {
