--- a/Ilevus/sass/custom/_schedule.scss
+++ b/Ilevus/sass/custom/_schedule.scss
@@ -6,22 +6,37 @@
 
 .#{$prefix}schedule thead {
     color: #fff;
-    background: #56bd5c;
+    background: $color-brand-base;
     font-size: 13px;
 }
 
+.#{$prefix}schedule thead th a {
+    color: #fff;
+}
+
 .#{$prefix}schedule th {
-    font-weight: normal;
+    font-weight: bold;
     padding: 12px 0;
     vertical-align: middle;
     text-align: center;
 }
 
 .#{$prefix}schedule td {
-    background: #f4f5f6;
-    border-top: 0 solid #fff;
-    border-right: solid 1px #fff;
-    height: 25px;
-    line-height: 25px;
+    background: rgba(0,0,0,.015);
+    border-top: 4px solid white;
+    height: 35px;
+    line-height: 35px;
     text-align: center;
+
+    &:not(:last-child) {
+        border-right: 4px solid white;
+    }
+}
+
+.#{$prefix}schedule td a {
+    display: block;
+
+    &:hover {
+        background-color: #ececec;
+    }
 }
