--- a/Ilevus/sass/custom/_landing-page.scss
+++ b/Ilevus/sass/custom/_landing-page.scss
@@ -72,9 +72,8 @@
 }
 
 .#{$prefix}lp-footer {
-  padding: 2.5rem 0;
-  background-color: $color-neutral-dark;
-  color: #fff;
+  padding: 32px 0;
+  border-top: 1px solid #dce0e0;
 }
 
 .#{$prefix}lp-icon-md {
