--- a/Ilevus/sass/components/_nav.scss
+++ b/Ilevus/sass/components/_nav.scss
@@ -102,6 +102,7 @@
 
 // Tabs
 .#{$prefix}nav-tabs {
+    border-bottom: 1px solid rgba(0,0,0,.15);
 
   .#{$prefix}nav-item + .#{$prefix}nav-item {
     margin: 0;
@@ -110,16 +111,17 @@
   .#{$prefix}nav-link {
     display: block;
     color: $nav-tabs-link-color;
-    padding: $nav-item-padding-y $nav-item-padding-x;
-    border: 1px solid transparent;
-    @include border-top-radius($border-radius);
+    padding: 12px;
+    border: none;
+    font-weight: 700;
+    font-size: 13px;
 
     @include hover {
       color: $nav-tabs-link-hover-color;
     }
 
     &.active {
-      font-weight: 600;
+      box-shadow: inset 0px -2px 0px 0px $color-primary-brand;
       background-color: $nav-tabs-link-active-bg;
       border-color: $nav-tabs-link-active-border;
     }
