--- a/Ilevus/sass/custom/_variables.scss
+++ b/Ilevus/sass/custom/_variables.scss
@@ -66,7 +66,7 @@ $card-bg:                      #ffffff;
 $card-header-bg:               $card-bg;
 $card-footer-bg:               $card-bg;
 
-$card-border-color:            $card-bg;
+$card-border-color:            #cfd7e6;
 
 $card-padding-x:               1rem !default;
 $card-padding-y:               1rem !default;
