--- a/Ilevus/sass/layouts/_chat.scss
+++ b/Ilevus/sass/layouts/_chat.scss
@@ -25,6 +25,47 @@
   padding: .75rem;
 }
 
+// ALTERAÇÕES CHAT
+.horario-mensagem {
+    margin-top: 0px !important;
+    position: absolute !important;
+    right: 0px !important;
+    bottom: -15px !important;
+    color: #000 !important;
+}
+
+.area-mensagem {
+    margin-bottom: 1.8rem !important;
+}
+
+.painel-chat-mobile {
+    margin-top: -40px;
+}
+
+.painel-chat-mobile .ilv-chat-messages {
+    width: 100%;
+    border-left: none;
+    margin-top: 60px;
+}
+
+.painel-chat-mobile .ilv-avatar-md {
+    width: 2rem;
+    height: 2rem;
+}
+
+.painel-chat-mobile .ilv-chat-list-item {
+    width: 3.5rem;
+}
+
+.lista-fotos-usuarios {
+    position: absolute;
+    width: 93%;
+    overflow-x: auto;
+    display: flex;
+}
+
+// *****
+
 .new-message-indicator {
     position: absolute;
     bottom: 10%;
