Remodelagem do rodapé do site para as três linguagens que o sistema trabalha; Inclusão do Font Awesome para utilização dos icones.

--- a/Ilevus/sass/anvil.scss
+++ b/Ilevus/sass/anvil.scss
@@ -67,3 +67,7 @@
 @import "custom/schedule";
 @import "custom/notifications";
 @import "custom/rating";
+
+
+//Font Awesome
+@import "fontawesome/font-awesome";
