- gravação de notificações no agendamento - ajustes chat (css)

--- a/Ilevus/sass/layouts/_chat.scss
+++ b/Ilevus/sass/layouts/_chat.scss
@@ -13,6 +13,13 @@
   .#{$prefix}chat-messages { width: 66.666667%; }
 }
 
+@media (max-width: 767px) {
+    .my-5 {
+        margin-top: 0px !important;
+        margin-bottom: 0px !important;
+    }
+    }
+
 
 //
 // Chat contact list container
