Melhoria na disposição dos processos de coach. Aplicação de estilos visuais.

--- a/Ilevus/sass/anvil.scss
+++ b/Ilevus/sass/anvil.scss
@@ -68,6 +68,8 @@
 @import "custom/notifications";
 @import "custom/rating";
 
+@import "custom/coaching";
+
 
 //Font Awesome
 @import "fontawesome/font-awesome";
