Romoção de comentários desnecessários e de imagem que não existia com referencia no arquivo SCSS

--- a/Ilevus/sass/custom/_landing-page.scss
+++ b/Ilevus/sass/custom/_landing-page.scss
@@ -85,8 +85,7 @@
 
 .#{$prefix}lp-testimonial {
   background:
-    linear-gradient(rgba($color-neutral-dark, .55), rgba($color-neutral-dark, .75) ),
-    url("/Business-Profile-Photograph.jpg");
+    linear-gradient(rgba($color-neutral-dark, .55), rgba($color-neutral-dark, .75) );
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
