--- a/Ilevus/sass/layouts/_chat.scss
+++ b/Ilevus/sass/layouts/_chat.scss
@@ -13,6 +13,10 @@
   .#{$prefix}chat-messages { width: 66.666667%; }
 }
 
+.hora-notificacao {
+    font-size: 2vh;
+}
+
 @media (max-width: 767px) {
     .my-5 {
         margin-top: 0px !important;
