--- a/Ilevus/sass/custom/_general.scss
+++ b/Ilevus/sass/custom/_general.scss
@@ -18,8 +18,12 @@ display: inline-block;
     border-radius: 0.1875rem;
 }
 
-.ilv-form-group div {
+.ilv-form-group > div {
     width: 100%;
+}
+
+.Select-input > input {
+    border: none !important;
 }
 
 .#{$prefix}invalid {
