--- a/Ilevus/Views/index.html
+++ b/Ilevus/Views/index.html
@@ -71,7 +71,7 @@
         var apiPath = "api/";
         var urlBase = "http://localhost:57141/";
         //var old_urlBase = location.origin + "/";
-        var BACKEND_URL = urlBase + apiPath;
+        var BACKEND_URL = "/api/"//urlBase + apiPath;
     </script>
     <script type="text/javascript" src="https://s3.amazonaws.com/assets-sandbox.moip.com.br/assinaturas/moip-assinaturas.min.js"></script>
     <script type="text/javascript" src="/bundle.js" charset="utf-8"></script>
