--- a/Ilevus/Views/index.html
+++ b/Ilevus/Views/index.html
@@ -14,6 +14,8 @@
     <script src="https://cdn.jsdelivr.net/webshim/1.12.4/extras/modernizr-custom.js"></script>
     <!-- polyfiller file to detect and load polyfills -->
     <script src="https://cdn.jsdelivr.net/webshim/1.12.4/polyfiller.js"></script>
+    <script src="https://js.stripe.com/v3/"></script>
+    
 
     <script>
         webshims.setOptions('waitReady', false);
